crates/service/tests/code_action/snapshots/features__code_action__simplify_ref_type__anyref.snap
---
source: crates/service/tests/code_action/simplify_ref_type.rs
expression: response
---
[
  {
    "title": "Simplify to `anyref`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 15
              },
              "end": {
                "line": 2,
                "character": 29
              }
            },
            "newText": "anyref"
          }
        ]
      }
    }
  }
]
